2013-03-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r15897. Patch by Werner Koch.

	* misc/openvas_server.c	(server_attach): Factor all code out to ..
	(server_attach_internal): new function.  Add and use args HOST and
	PORT.  Return -2 on handshake failure.
	(openvas_server_new): Factor all code out to ..
	(server_new_internal): new function.  Add optional arg PRIORITY.
	(openvas_server_open): Replace duplicate code by calls to
	server_new_internal and server_attach_internal.
	(openvas_server_connect): Replace handshake code by a call to
	openvas_server_attach.
	(openvas_server_free): Add backward compatibility change to allow
	use by openvas_server_close.
	(openvas_server_close): Replace by call to openvas_server_free.

2013-03-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport for r15849. Patch by Werner Koch.

	* INSTALL: State that gnutls 2.8 is required.

	* misc/openvas_server.c (openvas_server_new): Change type of the
	END_TYPE arg to unsigned int. On most platforms this is
	compatible to the enum used by gnutls 2.x.
	* misc/openvas_server.h (openvas_server_new): Ditto.

2013-03-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+rc2.

2013-03-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Preparing the openvas-libraries 6.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Version bump to 6.0+rc1.

2013-03-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increased dependency to gnutls from 2.2 to 2.8.

2013-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plugin_is_newstyle): Change tag name detection to
	vuldetect.

2013-03-06  Henri Doreau <henri.doreau@greenbone.net>

	* nasl/nasl_builtin_nmap.c: Changed license from GPLv2 to GPLv2+
	copyrighted by Greenbone.

2013-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plugin_is_newstyle): New function.